--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@j.u.p.iter/react-icon",
-  "version": "0.0.1",
+  "version": "0.0.0-semantically-released",
   "description": "Reusable icon component",
   "keywords": [
     "react",
